<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.unidad1.RelativeActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Type_name"
        android:textSize="@dimen/dimens_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimens_text"
        android:id="@+id/type_name"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Type_age"
        android:textSize="@dimen/dimens_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimens_text"
        android:id="@+id/type_age"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_phone"
        android:textSize="@dimen/dimens_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimens_text"
        android:id="@+id/type_phone"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimens_text"
        android:text="@string/submit"
        android:id="@+id/submit_info"/>

</LinearLayout>
